--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bull": "^4.10.4",
     "classnames": "^2.3.2",
     "cron": "^2.3.0",
+    "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "ethers": "^5.7.1",
